# PickleEngine

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Cargo.toml  LICENSE  NEXT_STEP.md  README.md  SYS_CONF.txt  cmd.txt  conf.json  config_example.json  libs.json  main.c  main.cpp  main.h  main.hpp  makefile  meta.json  mingw-toolchain.cmake  picklejumper  requirements.txt  system_conf.txt  truc_a_faire.txt
V1.0bean/: .gitignore  CMakeLists.txt  conf.json  libs.json
V1.0bean/modules/app_loop/: CMakeLists.txt  README.md
V1.0bean/modules/assets_loader/: meta.json
V1.0bean/modules/assets_loader/include/: assets_loader.hpp
V1.0bean/modules/assets_loader/src/: assets_loader.cpp
V1.0bean/modules/easy_drawing/: README.md  meta.json
V1.0bean/modules/easy_drawing/src/: easy_drawing.cpp
V1.0bean/modules/ecs_sprite/: CMakeLists.txt  meta.json
V1.0bean/modules/fast_debugging/: CMakeLists.txt  meta.json
V1.0bean/modules/fast_debugging/include/: fast_debugging.hpp
V1.0bean/modules/fast_debugging/src/: fast_debugging.cpp
V1.0bean/modules/keyboard_manager/: README.md
V1.0bean/modules/rgb_pallet/: CMakeLists.txt
V1.0bean/modules/rgb_pallet/src/: rgb_pallet.cpp
V1.0bean/modules/window_render/: meta.json
V1.0bean/modules/window_render/src/: window_render.cpp
V1.0bean/scripts/tools/: cmake_update_module.py  install_lib.py  new_modules.py  new_project.py  project_compiler.py
V1.0bean/scripts/tools/utility/: cmake.py  const.py  pk_rich.py  run_commands.py  snake_case.py
cmake/: functions.cmake
core/: CMakeLists.txt  ModuleInterface.hpp  ModuleManager.hpp
crates/pickle-cli/: Cargo.toml
crates/pickle-commands/: Cargo.toml
crates/pickle-config/: Cargo.toml
crates/pickle-core/: Cargo.toml
crates/pickle-plugin-api/: Cargo.toml
crates/pickle-runtime/: Cargo.toml
docs/: truc_a_faire.txt
engine_launcher/: CMakeLists.txt  conf.json  main.cpp
engine_launcher/header/: game_manager.hpp
engine_launcher/include/: player.hpp
engine_launcher/src/: game_manager.cpp  player.cpp
headers/: allinclude.hpp  window.h  window.hpp
headers/core/: deltatime.h  game.h  renderer.h  sprite.h  window.h
headers/core/graphic/: sprite.h
headers/core/input/: sys_input.h
headers/core/object/: collide_box.h
headers/object/: object.h
headers/system/: configuration.h  game_input.h
include/: allinclude.hpp
include/graphic/: sprite.h
include/system/: configuration.hpp  deltatime.h  renderer.hpp  window.hpp
libs/: CMakeLists.txt
libs/SDL3/: CMakeLists.txt
libs/SDL3/include/SDL3/: SDL_revision.h
libs/SDL3/lib/pkgconfig/: sdl3.pc
libs/SDL3/share/licenses/SDL3/: LICENSE.txt
libs/SDL3_image/: CMakeLists.txt
libs/SDL3_image/lib/cmake/SDL3_image/: SDL3_imageConfig.cmake
libs/SDL3_image/lib/pkgconfig/: sdl3-image.pc
libs/entt/include/: CMakeLists.txt
modules/: CMakeLists.txt
modules/app_loop/: CMakeLists.txt  README.md  meta.json
modules/app_loop/include/app_loop/: app_loop.hpp
modules/app_loop/src/: app_loop.cpp
modules/app_loop_sdl3/: CMakeLists.txt  meta.json
modules/app_loop_sdl3/include/app_loop_sdl3/: app_loop_sdl3.hpp
modules/app_loop_sdl3/src/: app_loop_sdl3.cpp
modules/assets_loader/: CMakeLists.txt
modules/assets_loader/include/: assets_loader.hpp
modules/assets_loader/src/: assets_loader.cpp
modules/caca/: CMakeLists.txt  meta.json
modules/caca/include/: caca.hpp
modules/caca/src/: caca.cpp
modules/easy_drawing/: CMakeLists.txt  meta.json
modules/easy_drawing/include/easy_drawing/: easy_drawing.hpp
modules/ecs_base_tools/: CMakeLists.txt  README.md  meta.json
modules/ecs_base_tools/include/ecs_base_tools/: ecs_base_tools.hpp
modules/ecs_base_tools/src/: ecs_base_tools.cpp
modules/ecs_collisions/: CMakeLists.txt  README.md  meta.json
modules/ecs_collisions/include/ecs_collisions/: ecs_collisions.hpp
modules/ecs_collisions/src/: ecs_collisions.cpp
modules/ecs_sprite/: CMakeLists.txt  README.md  meta.json
modules/ecs_sprite/include/ecs_sprite/: ecs_sprite.hpp
modules/ecs_sprite/src/: ecs_sprite.cpp
modules/keyboar_manager/: CMakeLists.txt
modules/keyboar_manager/src/: keyboar_manager.cpp
modules/keyboard_manager/: CMakeLists.txt  meta.json
modules/keyboard_manager/include/keyboard_manager/: keyboard_manager.hpp
modules/keyboard_manager/src/: keyboard_manager.cpp
modules/pktest_module/: CMakeLists.txt  meta.json
modules/pktest_module/src/: pktest_module.cpp
modules/rgb_pallet/: CMakeLists.txt  README.md  meta.json
modules/sprite_class/: CMakeLists.txt  README.md  meta.json
modules/sprite_class/include/sprite_class/: sprite_class.hpp
modules/sprite_class/src/: sprite_class.cpp
modules/sprite_sdl3_img/: CMakeLists.txt  meta.json
modules/sprite_sdl3_img/include/sprite_sdl3_img/: sprite_sdl3_img.hpp
modules/sprite_sdl3_img/src/: sprite_sdl3_img.cpp
modules/window_render/: CMakeLists.txt  README.md  meta.json
modules/window_render/include/: window_render.hpp
modules/window_render/include/window_render/: window_render.hpp
modules/window_render/src/: window_render.cpp
scripts/: build.sh  build_finaly.sh  build_linux.sh  build_linux_mac_vc.sh  build_linux_release.sh  chmoder_all.sh  cmd_sdl_image.txt  get_libs.sh  get_modules.sh  new_module.sh  tools.py  update_sdl3.sh  update_sdl3_image.sh
scripts/tools/: ModuleScriptClass.py  ScriptClass.py  cmake_update_module.py  install_lib.py  new_modules.py  new_project.py  project_compiler.py
scripts/tools/utility/: clone_repo.py  cmake.py  const.py  dict.py  pk_rich.py  run_commands.py
scripts/update_sdl3/: update_sdl3_linux.sh  update_sdl3_win.sh
srcs/: window.c  window.cpp
srcs/core/: deltatime.c  game.c  renderer.c  sprite.c  window.c
srcs/core/graphic/: sprite.c
srcs/core/input/: sys_input.c
srcs/core/object/: collide_box.c  object.c
srcs/core/system/: configuration.c  sys_input.c
srcs/graphic/: sprite.c
srcs/object/: collide_box.c  object.c
srcs/system/: configuration.c  configuration.cpp  deltatime.c  game_input.c  renderer.cpp  sys_input.c  window.cpp
(+3 files in other folders)
